# caffeine-obs-plugin

./: .cmake-format.json  CMakeLists.txt  CODEOWNERS  README.md  buildspec.json
cmake/: ObsPluginHelpers.cmake  xcode.cmake
cmake/bundle/macos/: create-package.cmake.in
cmake/bundle/windows/: installer-Windows.iss.in
data/locale/: en-US.ini
scripts/: .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1  check-cmake.sh  check-format.sh  generate-graphql-types.sh
scripts/utils.zsh/: read_codesign  read_codesign_pass
src/: broadcast.cpp  broadcast.hpp  caffeine-dock-window.cpp  caffeine-dock-window.hpp  caffeine.cpp  caffeine.hpp  error-logging.hpp  instance.cpp  instance.hpp  plugin-macros.h.in  plugin-main.cpp  policy.cpp  policy.hpp  rest-api.cpp  rest-api.hpp  serialization.cpp  serialization.hpp  urls.cpp  urls.hpp  utils.hpp  websocket-api.cpp  websocket-api.hpp
src/forms/: Caffeine.qrc  CaffeineDockWindow.ui
tests/: CMakeLists.txt  test-helper.hpp  test-main.cpp  test-policy.hpp
